--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -289,3 +289,19 @@ body {
     transform: translateX(50px) translateY(50px) rotateY(0deg) rotateX(90deg);
   }
 }
+
+.scene {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  transform-style: preserve-3d;
+  transform: translateZ(-50px);
+}
+model-viewer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transform: translateZ(-50px);
+}
